session-guide/examples/01-basic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-basic
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.27
    ports:
    - containerPort: 80
